fixed target id to only target the one selected

--- a/script.css
+++ b/script.css
@@ -99,5 +99,10 @@ button {
     letter-spacing: 1px;
 }
 
-
+.highlight{
+    background-color: #fff0ee;
+    color: #bd301d;
+    font-weight: bold;
+    accent-color: #bd301d;
+}
 
